Update swagger json
