# src/app/core/data-services/model/agentRequest.ts
@@ -1,0 +1,15 @@
+/**
+ * ENTropy API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface AgentRequest { 
+    message: string;
+}
+
